# nucleo-g431kb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gcc-toolchain.cmake
Project/Core/: main.c  main.h
Project/Core/AzureRTOS/: sample_threadx.ld
Project/Drivers/Device/: stm32g431kbt6_flash.ld
Project/Drivers/Device/Include/: stm32g4xx.h
